--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=storage-demo
+spring.profiles.active=dev
+aws.region=ap-southeast-2
+aws.bucket=storage-example
+app.storage.local-dir=./temp-storage
+app.storage.base-url=http://localhost:8080/files
