--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ aws.region=ap-southeast-2
 aws.bucket=storage-example
 app.storage.local-dir=./temp-storage
 app.storage.base-url=http://localhost:8080/files
+
+spring.datasource.url=jdbc:mysql://localhost:3306/storage_demo
+spring.datasource.username=root
+# spring.datasource.password=MyPass 
+spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
